<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/CarBannerImageConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abarth124spider"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2011"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BMW"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 Series"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/trim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="328i"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$ 17,234"
                android:textStyle="bold"
                android:textColor="@color/pure_black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/separe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/pure_black"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="39.1k mi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/pure_black"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/storeDetailsDividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/storeHoursTableTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:text="@string/vehicle_info"
        android:textColor="@color/pure_black"
        />

    <TableLayout
        android:id="@+id/carDetailsTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeHoursTableTitleTextView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/location"
                />

            <TextView
                android:id="@+id/location_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="New York, NY"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exterior_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/exterior_color"
                />

            <TextView
                android:id="@+id/exterior_color_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="Blue"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/interior_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/interior_color"
                />

            <TextView
                android:id="@+id/interior_color_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="Black"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/driver_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/driver_type"
                />

            <TextView
                android:id="@+id/driver_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="FWD"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/transmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/transmission"
                />

            <TextView
                android:id="@+id/transmission_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="Automatic"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/body_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/body_style"
                />

            <TextView
                android:id="@+id/body_style_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="Sedan"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/engine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/engine"
                />

            <TextView
                android:id="@+id/engine_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="4 Cyl 2.4 L"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/fuel"
                />

            <TextView
                android:id="@+id/fuel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="Gosoline"
                android:textAlignment="textStart"
                android:textColor="@color/pure_black"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/DividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/pure_white"
            android:layout_margin="10dp"
            android:text="@string/call_dealer"/>
    </LinearLayout>

</LinearLayout>